--- a/COPY FINAL CODE.ipynb
+++ b/COPY FINAL CODE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet_name= \"e_bike\"\n",
-    "link_page = \"https://www.bike24.com/e-bikes.html?menu=1000,314\"\n",
-    "\n",
-    "# sheet_name= \"road_bike\"\n",
-    "# link_page = \"https://www.bike24.com/road-bikes.html?menu=1000,173,157\"\n",
-    "\n",
+    "sheet_name= \"road_bike\"\n",
+    "link_page = \"https://www.bike24.com/road-bikes.html?menu=1000,173,157\"\n",
+    "# link_page = \"https://www.bike24.com/e-bikes.html?menu=1000,314\"\n",
     "file_name = \"output.xlsx\"\n",
-    "wait_min = 2\n",
-    "wait_max = 5"
+    "\n",
+    "wait_min = 5\n",
+    "wait_max = 10"
    ]
   },
   {
@@ -56,14 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [02:07<00:00, 25.51s/it]\n"
+     "ename": "NoSuchWindowException",
+     "evalue": "Message: no such window: window was already closed\n  (Session info: chrome=99.0.4844.74)\nStacktrace:\n0   3bd982466bf46f9b_chromedriver       0x000000010d504159 3bd982466bf46f9b_chromedriver + 5120345\n1   3bd982466bf46f9b_chromedriver       0x000000010d491b13 3bd982466bf46f9b_chromedriver + 4651795\n2   3bd982466bf46f9b_chromedriver       0x000000010d081e68 3bd982466bf46f9b_chromedriver + 392808\n3   3bd982466bf46f9b_chromedriver       0x000000010d07123e 3bd982466bf46f9b_chromedriver + 324158\n4   3bd982466bf46f9b_chromedriver       0x000000010d072762 3bd982466bf46f9b_chromedriver + 329570\n5   3bd982466bf46f9b_chromedriver       0x000000010d06affc 3bd982466bf46f9b_chromedriver + 299004\n6   3bd982466bf46f9b_chromedriver       0x000000010d0832b2 3bd982466bf46f9b_chromedriver + 398002\n7   3bd982466bf46f9b_chromedriver       0x000000010d0e6db2 3bd982466bf46f9b_chromedriver + 806322\n8   3bd982466bf46f9b_chromedriver       0x000000010d0d4a33 3bd982466bf46f9b_chromedriver + 731699\n9   3bd982466bf46f9b_chromedriver       0x000000010d0aa5dd 3bd982466bf46f9b_chromedriver + 558557\n10  3bd982466bf46f9b_chromedriver       0x000000010d0ab4f5 3bd982466bf46f9b_chromedriver + 562421\n11  3bd982466bf46f9b_chromedriver       0x000000010d4c138d 3bd982466bf46f9b_chromedriver + 4846477\n12  3bd982466bf46f9b_chromedriver       0x000000010d4db21c 3bd982466bf46f9b_chromedriver + 4952604\n13  3bd982466bf46f9b_chromedriver       0x000000010d4e0a12 3bd982466bf46f9b_chromedriver + 4975122\n14  3bd982466bf46f9b_chromedriver       0x000000010d4dbb4a 3bd982466bf46f9b_chromedriver + 4954954\n15  3bd982466bf46f9b_chromedriver       0x000000010d4b65b0 3bd982466bf46f9b_chromedriver + 4801968\n16  3bd982466bf46f9b_chromedriver       0x000000010d4f5f78 3bd982466bf46f9b_chromedriver + 5062520\n17  3bd982466bf46f9b_chromedriver       0x000000010d4f60ff 3bd982466bf46f9b_chromedriver + 5062911\n18  3bd982466bf46f9b_chromedriver       0x000000010d50b545 3bd982466bf46f9b_chromedriver + 5150021\n19  libsystem_pthread.dylib             0x00007ff80f3d14e1 _pthread_start + 125\n20  libsystem_pthread.dylib             0x00007ff80f3ccf6b thread_start + 15\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cahyoardhi/Programming/bike24-scraping/COPY FINAL CODE.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000004?line=11'>12</a>\u001b[0m \u001b[39m#set window size\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000004?line=12'>13</a>\u001b[0m driver\u001b[39m.\u001b[39mset_window_size(\u001b[39m1920\u001b[39m, \u001b[39m1080\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000004?line=13'>14</a>\u001b[0m driver\u001b[39m.\u001b[39;49mmaximize_window()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000004?line=15'>16</a>\u001b[0m \u001b[39m#check how many pagination the page has\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000004?line=16'>17</a>\u001b[0m driver\u001b[39m.\u001b[39mget(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mlink_page\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py:985\u001b[0m, in \u001b[0;36mWebDriver.maximize_window\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=982'>983</a>\u001b[0m params \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=983'>984</a>\u001b[0m command \u001b[39m=\u001b[39m Command\u001b[39m.\u001b[39mW3C_MAXIMIZE_WINDOW\n\u001b[0;32m--> <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=984'>985</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(command, params)\n",
+      "File \u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py:425\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=422'>423</a>\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=423'>424</a>\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[0;32m--> <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=424'>425</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=425'>426</a>\u001b[0m     response[\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=426'>427</a>\u001b[0m         response\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py?line=427'>428</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[0;32m/opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py:247\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py?line=244'>245</a>\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m'\u001b[39m\u001b[39malert\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py?line=245'>246</a>\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> <a href='file:///opt/miniconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py?line=246'>247</a>\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m: Message: no such window: window was already closed\n  (Session info: chrome=99.0.4844.74)\nStacktrace:\n0   3bd982466bf46f9b_chromedriver       0x000000010d504159 3bd982466bf46f9b_chromedriver + 5120345\n1   3bd982466bf46f9b_chromedriver       0x000000010d491b13 3bd982466bf46f9b_chromedriver + 4651795\n2   3bd982466bf46f9b_chromedriver       0x000000010d081e68 3bd982466bf46f9b_chromedriver + 392808\n3   3bd982466bf46f9b_chromedriver       0x000000010d07123e 3bd982466bf46f9b_chromedriver + 324158\n4   3bd982466bf46f9b_chromedriver       0x000000010d072762 3bd982466bf46f9b_chromedriver + 329570\n5   3bd982466bf46f9b_chromedriver       0x000000010d06affc 3bd982466bf46f9b_chromedriver + 299004\n6   3bd982466bf46f9b_chromedriver       0x000000010d0832b2 3bd982466bf46f9b_chromedriver + 398002\n7   3bd982466bf46f9b_chromedriver       0x000000010d0e6db2 3bd982466bf46f9b_chromedriver + 806322\n8   3bd982466bf46f9b_chromedriver       0x000000010d0d4a33 3bd982466bf46f9b_chromedriver + 731699\n9   3bd982466bf46f9b_chromedriver       0x000000010d0aa5dd 3bd982466bf46f9b_chromedriver + 558557\n10  3bd982466bf46f9b_chromedriver       0x000000010d0ab4f5 3bd982466bf46f9b_chromedriver + 562421\n11  3bd982466bf46f9b_chromedriver       0x000000010d4c138d 3bd982466bf46f9b_chromedriver + 4846477\n12  3bd982466bf46f9b_chromedriver       0x000000010d4db21c 3bd982466bf46f9b_chromedriver + 4952604\n13  3bd982466bf46f9b_chromedriver       0x000000010d4e0a12 3bd982466bf46f9b_chromedriver + 4975122\n14  3bd982466bf46f9b_chromedriver       0x000000010d4dbb4a 3bd982466bf46f9b_chromedriver + 4954954\n15  3bd982466bf46f9b_chromedriver       0x000000010d4b65b0 3bd982466bf46f9b_chromedriver + 4801968\n16  3bd982466bf46f9b_chromedriver       0x000000010d4f5f78 3bd982466bf46f9b_chromedriver + 5062520\n17  3bd982466bf46f9b_chromedriver       0x000000010d4f60ff 3bd982466bf46f9b_chromedriver + 5062911\n18  3bd982466bf46f9b_chromedriver       0x000000010d50b545 3bd982466bf46f9b_chromedriver + 5150021\n19  libsystem_pthread.dylib             0x00007ff80f3d14e1 _pthread_start + 125\n20  libsystem_pthread.dylib             0x00007ff80f3ccf6b thread_start + 15\n"
      ]
     }
    ],
@@ -180,17 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#open file\n",
     "df = pd.read_excel(file_name, sheet_name=f'{sheet_name}_list')\n",
@@ -200,9 +197,7 @@
     "dlist = df_temp['Page Link'].values\n",
     "filterTable = [link for link in vlist if link not in dlist]\n",
     "\n",
-    "df_detail = df.loc[df['Page Link'].isin(filterTable)]\n",
-    "\n",
-    "print(filterTable)"
+    "df_detail = df.loc[df['Page Link'].isin(filterTable)]"
    ]
   },
   {
@@ -214,14 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n"
+      "9it [07:44, 51.66s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/cahyoardhi/Programming/bike24-scraping/COPY FINAL CODE.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=18'>19</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, r \u001b[39min\u001b[39;00m tqdm(df_detail\u001b[39m.\u001b[39miterrows()):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=19'>20</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=20'>21</a>\u001b[0m     \u001b[39m#open page link\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=21'>22</a>\u001b[0m     driver\u001b[39m.\u001b[39mget(r[\u001b[39m'\u001b[39m\u001b[39mPage Link\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=22'>23</a>\u001b[0m     time\u001b[39m.\u001b[39;49msleep(np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mrandint(wait_min, wait_max))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=24'>25</a>\u001b[0m     \u001b[39m#wait until cookies modal ready to clickable\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cahyoardhi/Programming/bike24-scraping/COPY%20FINAL%20CODE.ipynb#ch0000008?line=25'>26</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -376,6 +382,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_detail"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
